--- a/app.json
+++ b/app.json
@@ -9,8 +9,9 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#C1D7C6"
     },
+    
     "updates": {
       "fallbackToCacheTimeout": 0
     },
