--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/baloo-bhai-2": "^0.2.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-document-picker": "~10.2.1",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-dropdown-v2-fixed": "^0.11.3",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
