--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/baloo-bhai-2": "^0.2.2",
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
@@ -18,16 +19,20 @@
     "expo-document-picker": "~10.2.1",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "firebase": "^8.5.0-20214541157",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
-    "react-native-maps": "^0.31.1",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-slider-box": "^2.0.2",
+    "react-native-inset-shadow": "^1.0.3",
+    "react-native-maps": "0.30.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-dropdown-v2-fixed": "^0.11.3",
     "react-native-paper": "^4.12.2",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-splash-screen": "^3.3.0",
