geocoding api (forward-location-working)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-app-loading": "~2.0.0",
     "expo-document-picker": "~10.2.1",
     "expo-font": "~10.1.0",
+    "expo-location": "^14.2.2",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
     "firebase": "^8.5.0-20214541157",
@@ -24,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-geolocation-service": "^5.3.0",
     "react-native-maps": "^0.31.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-dropdown-v2-fixed": "^0.11.3",
